Barra superior PARTE 1

--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <h1>Olá DSMovie!</h1>
-    <h3>Promoções</h3>
-    <h3>Agenda de Filmes</h3>
+    <header>
+      <nave class="container">
+          <h1> DSMovie</h1>
+          <a href="https://github.com/laghub2022">/laghub2022</a>
+      </nave>  
+    </header>
 </body>
 </html>
